[VK] Allow occluded bounds to be set for docked keyboard as well.

Before, we only allowed IME to set occluded bounds for fullscreen
keyboard because the other container behaviors (floating and docked)
knew what their occluded bounds were.

However, with recent changes, docked keyboard was made transparent so
that shadows could be drawn by IME. This means that the occluded bounds
for docked keyboard is not longer the same as the size of the window.
IME needs to tell the keyboard what parts are actually occluded so that
Chrome don't think shadows are also occluding the page.

We make SetOccludedBounds a method on the base ContainerBehavior class
and override it in docked keyboard. We also had to change
SetOccludedBounds to use coordinates relative to the window (since that
is what IME uses [*]).

Note that the occluded bounds for docked default to the keyboard window
bounds, so there are no behavioural changes if IME doesn't call
SetOccludedBounds.

[*] This didn't matter for fullscreen keyboard because the keyboard
bounds was same as screen bounds.

Bug: 867775
Change-Id: I4eec3ecc281aad71781568f988cad2a2c3272ad2
Reviewed-on: https://chromium-review.googlesource.com/1151030
Commit-Queue: Darren Shen <shend@chromium.org>
Reviewed-by: Yuichiro Hanada <yhanada@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578228}
Former-commit-id: c7dcd70e402ec71ee59b431ea02849e58243c85e