ui/keyboard/container_behavior.h
@@ -72,14 +72,20 @@ class KEYBOARD_EXPORT ContainerBehavior {
   // Removing focus from a text field should cause the keyboard to be dismissed.
   virtual bool TextBlurHidesKeyboard() const = 0;
 
-  // Gets the region of the screen that is occluded by the keyboard, or an empty
-  // rectangle if nothing is occluded. The occluded region is considered to be
-  // 'unusable', so the window manager or other system UI should respond to the
-  // occluded bounds (e.g. by moving windows out of the occluded region).
+  // Sets a region of the keyboard window that is occluded by the keyboard.
+  // This is called by the IME extension code. By default, this call is ignored.
+  // Container behaviors that listen for this call should override this method.
+  virtual void SetOccludedBounds(const gfx::Rect& occluded_bounds_in_window) {}
+
+  // Gets the region of the keyboard window that is occluded by the keyboard, or
+  // an empty rectangle if nothing is occluded. The occluded region is
+  // considered to be 'unusable', so the window manager or other system UI
+  // should respond to the occluded bounds (e.g. by moving windows out of the
+  // occluded region).
   //
   // The occluded bounds must be completely contained in the visual bounds.
   virtual gfx::Rect GetOccludedBounds(
-      const gfx::Rect& visual_bounds_in_screen) const = 0;
+      const gfx::Rect& visual_bounds_in_window) const = 0;
 
   // Any region of the screen that is occluded by the keyboard should cause the
   // workspace to change its layout.
