ui/keyboard/container_full_width_behavior.h
@@ -47,12 +47,14 @@ class KEYBOARD_EXPORT ContainerFullWidthBehavior : public ContainerBehavior {
                           const gfx::Rect& display_bounds) override;
   ContainerType GetType() const override;
   bool TextBlurHidesKeyboard() const override;
+  void SetOccludedBounds(const gfx::Rect& occluded_bounds_in_window) override;
   gfx::Rect GetOccludedBounds(
       const gfx::Rect& visual_bounds_in_screen) const override;
   bool OccludedBoundsAffectWorkspaceLayout() const override;
   bool SetDraggableArea(const gfx::Rect& rect) override;
 
  private:
+  gfx::Rect occluded_bounds_in_window_;
   KeyboardController* controller_;
 };
 
